vlib/v/checker/tests/defer_optional.vv
fn opt() ? {}

fn thing() ?string {
	defer {
		opt()
	}
	return 'ok'
}
